# C-Collection

./: .gitignore  BUILD.MD  CMakelists.txt  README.MD  USAGE.MD
include/: LinkedList.h  allocate.h  generic_utils.h  queue.h  stack.h  vector.h
src/: LinkedList.c  queue.c  stack.c  vector.c
test/: CMakeLists.txt  test.c
